<resources>
    <string name="app_name">Kaktus Dobíječka</string>

    <string name="generic_alert_button_ok">OK</string>
    <string name="generic_alert_button_cancel">Storno</string>

    <string name="donation_header">Podpořte Kaktus Dobíječku</string>
    <string name="donation_text">Slouží ti tahle appka dobře a máš díky dobíječce tolik kreditu, že nevíš co s ním? \u263a Co takhle ho trochu darovat na její podporu?\n\nPosílat ho můžete přes oficiální Kaktus appku. V menu vyberte položku \"Poslat\u00A0kredit\" a zadejte telefonní číslo %s.\n\nKaždá koruna se počítá! Díky!!!</string>
    <string name="donation_button_hide">Skrýt</string>
    <string name="donation_button_donate">Kopírovat tel. číslo a\notevřít Kaktus appku</string>

    <string name="info_header">Informace pro uživatele</string>

    <string name="app_settings_button">Otevřít nastavení</string>
    <string name="app_notifications_header">Oznámení jsou blokována</string>
    <string name="app_notifications_text">Zobrazení oznámení z aplikace je blokováno. V nastavení aplikace zkontrolujte sekce <b>Oznámení</b> a <b>Oprávnění</b>, že je tam vše povoleno, tak aby se upozornění správně zobrazovala.</string>
    <string name="app_hibernation_header">Omezení nepoužívaných aplikací</string>
    <string name="app_hibernation_text1">Protože typicky stačí jen sledovat upozornění z appky a není potřeba ji vůbec spouštět, mohl by ji android vyhodnotit jako nepoužívanou a začít blokovat zobrazení jejích upozornění.</string>
    <!-- app_hibernation_text2 is different for SDK v33 and up -->
    <string name="app_hibernation_text2">Aby k tomu nedošlo, je potřeba v nastavení "O aplikaci" pro tuto appku, dole v sekci "<b>Nepoužívané aplikace</b>" <u>vypnout</u> volbu "<b>Odebrat oprávnění a uvolnit místo</b>".</string>

    <string name="lastNotification_header">Upozornění na dobíječku</string>
    <string name="lastNotification_none">Zatím nebylo přijato žádné upozornění.</string>

    <string name="lastFbPost_header">Kaktus na Facebooku</string>
    <string name="lastFbPost_disabled">Zde býval poslední příspěvek z Facebook stránky Kaktusu. Protože se Facebook rozhodl změnit podmínky pro aplikace, jako je tahle, tak už se zobrazovat nebude.\nHlavní funkce appky — upozornění na dobíječku — tím není nijak ovlivněna a bude fungovat jako doposud.</string>
    <string name="hide_lastFbPost">Skrýt příspěvek z Facebooku</string>

    <string name="status_missing_google_play_services">Toto zařízení bohužel není podporováno. Aplikace vyžaduje Služby Google Play, které zde nejsou dostupné.</string>
    <string name="status_fcm_registered">Příjem upozornění je aktivní.</string>
    <string name="status_fcm_registration_in_progress">Probíhá přihlášení k odběru upozornění …</string>
    <string name="status_fcm_registration_error">Registrace pro příjem upozornení se zatím nepodařila. Za chvíli to zkusíme znovu …</string>

    <string name="dialog_notifications_permission_title">Povolit oznámení</string>
    <string name="dialog_notifications_permission_message">Aby aplikace mohla zobrazovat upozornění na dobíječku, je potřeba pro ni povolit odesílání oznámení, jinak nebude fungovat.</string>
    <string name="dialog_notifications_permission_ok">OK</string>

    <string name="dialog_debug_info_title">Technické info</string>
    <string name="dialog_debug_info_firebase_instance_id">ID: %s</string>
    <string name="dialog_debug_info_refresh_time">Obnoveno: %1$tY-%1$tm-%1$td&#160;%1$tH:%1$tM:%1$tS</string>
    <string name="dialog_debug_info_topic_subscription">Přihlášeno: %b</string>
    <string name="dialog_debug_info_warning">Informace sdílejte jen s důvěryhodnými osobami!</string>
    <string name="dialog_debug_info_copy_to_clipboard">Kopírovat</string>
    <string name="dialog_debug_info_copy_unavailable">Technické informace nejsou dostupné</string>
    <string name="dialog_debug_info_button_ok">OK</string>

    <string name="dialog_notification_received_title">Přijato</string>

    <string name="notification_action_view">Zobrazit na webu</string>
    <string name="notification_action_cancel">Skrýt</string>

    <string name="activity_about_name">O aplikaci</string>
    <string name="about_close">Zavřít</string>
    <string name="about_version">Verze: %s</string>
    <string name="about_sources_link"><u><a href="https://goo.gl/c1wV3W">Zdrojové kódy</a></u></string>
    <string name="about_privacy_link"><u><a href="https://goo.gl/44Fs19">Ochrana soukromí</a></u></string>

    <string name="notification_channel_name">Upozornění na dobíječku</string>

</resources>
